--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
     background-image: url(../images/bg-card-front.png);
     background-repeat: no-repeat;
     border-radius: 20px;
-    width: 447px;
+    width: 100%;
     height: 247px;
     position: relative;
     z-index: 2;
@@ -36,7 +36,7 @@
     background-image: url(../images/bg-card-back.png);
     background-repeat: no-repeat;
     border-radius: 20px;
-    width: 447px;
+    width: 100%;
     height: 247px;
     position: relative;
     z-index: 2;
